# timelapse-service-rs

./: Cargo.toml  Dockerfile
.deploy/: timelapse-service-rs.yaml
.deploy/timelapse-service-rs/: deployment.yaml  ingress.yaml  service.yaml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
src/: main.rs
