[package]
name = "timelapse-service-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
poem-openapi = { version = "2", features = ["swagger-ui", "openapi-explorer"]}
poem = "1"
chrono = "0.4.37"
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }
engiffen = "0.8.1"
mime_guess = "2.0.4"
